--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "cloudflare-request-cert"
-version = "0.1.0"
+version = "0.1.1"
 description = "SSL/TLS certificate automation using Cloudflare DNS"
 authors = [{ name = "Olof Hellqvist", email = "olof.hellqvist@gmail.com" }]
 license = { text = "MIT" }
@@ -16,6 +16,7 @@ classifiers = [
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
     "Programming Language :: Python :: 3.13",
+    "Programming Language :: Python :: 3.14",
     "Topic :: System :: Systems Administration",
     "Topic :: Security",
 ]
