chore: bump version to 0.1.3 and fix CI pypi environment

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -177,6 +177,9 @@ jobs:
   publish:
     name: Build and Publish
     runs-on: ubuntu-latest
+    environment:
+      name: pypi
+      url: https://pypi.org/p/cloudflare-request-cert
     if: github.event_name == 'release' && github.event.action == 'published'
     steps:
       - name: Checkout code
