--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -126,52 +126,76 @@ jobs:
 
   all-checks:
     name: All Checks Passed
-    if: always() && github.event_name != 'release'
+    if: always()
     needs: [lint, test, sbom]
     runs-on: ubuntu-latest
+    outputs:
+      success: ${{ steps.check.outputs.success }}
     steps:
       - name: Check all jobs
+        id: check
         run: |
-          if [[ "${{ needs.lint.result }}" != "success" ]] || [[ "${{ needs.test.result }}" != "success" ]] || [[ "${{ needs.sbom.result }}" != "success" ]]; then
+          if [[ "${{ needs.lint.result }}" == "success" ]] && [[ "${{ needs.test.result }}" == "success" ]] && [[ "${{ needs.sbom.result }}" == "success" ]]; then
+            echo "success=true" >> $GITHUB_OUTPUT
+            echo "All checks passed!"
+          else
+            echo "success=false" >> $GITHUB_OUTPUT
             echo "One or more checks failed"
             exit 1
           fi
-          echo "All checks passed!"
 
   draft-release:
     name: Draft Release
     runs-on: ubuntu-latest
     needs: [all-checks]
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main' && needs.all-checks.outputs.success == 'true'
+    permissions:
+      contents: write
     steps:
       - name: Checkout code
         uses: actions/checkout@v6
         with:
-          fetch-depth: 0
+          fetch-depth: 2
 
-      - name: Get version
-        id: get_version
+      - name: Check version change
+        id: check_version
+        shell: bash
         run: |
-          VERSION=$(grep '^version =' pyproject.toml | cut -d '"' -f 2)
-          echo "version=$VERSION" >> $GITHUB_OUTPUT
+          CURRENT_VERSION=$(grep -m 1 '^version =' pyproject.toml | cut -d '"' -f 2)
+          PREVIOUS_VERSION=$(git show HEAD~1:pyproject.toml 2>/dev/null | grep -m 1 '^version =' | cut -d '"' -f 2 || echo "")
 
-      - name: Check if tag exists
-        id: check_tag
-        run: |
-          if git rev-parse "v${{ steps.get_version.outputs.version }}" >/dev/null 2>&1; then
-            echo "exists=true" >> $GITHUB_OUTPUT
+          if [ -n "$PREVIOUS_VERSION" ] && [ "$CURRENT_VERSION" != "$PREVIOUS_VERSION" ]; then
+            echo "changed=true" >> $GITHUB_OUTPUT
+            echo "version=$CURRENT_VERSION" >> $GITHUB_OUTPUT
           else
-            echo "exists=false" >> $GITHUB_OUTPUT
+            echo "changed=false" >> $GITHUB_OUTPUT
           fi
 
+      - name: Create Git tag
+        if: steps.check_version.outputs.changed == 'true'
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git tag -a "v${{ steps.check_version.outputs.version }}" -m "Release v${{ steps.check_version.outputs.version }}"
+          git push origin "v${{ steps.check_version.outputs.version }}"
+
+      - name: Build package
+        if: steps.check_version.outputs.changed == 'true'
+        run: |
+          pip install uv
+          uv build
+
       - name: Create Release Draft
-        if: steps.check_tag.outputs.exists == 'false'
+        if: steps.check_version.outputs.changed == 'true'
         uses: softprops/action-gh-release@v2
         with:
-          tag_name: v${{ steps.get_version.outputs.version }}
-          name: v${{ steps.get_version.outputs.version }}
+          tag_name: v${{ steps.check_version.outputs.version }}
+          name: v${{ steps.check_version.outputs.version }}
           draft: true
           generate_release_notes: true
+          files: |
+            dist/*.whl
+            dist/*.tar.gz
           token: ${{ secrets.GITHUB_TOKEN }}
 
   publish:
