--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,6 @@ jobs:
   lint:
     name: Lint
     runs-on: ubuntu-latest
-    if: github.event_name != 'release'
     steps:
       - name: Checkout code
         uses: actions/checkout@v6
@@ -44,7 +43,6 @@ jobs:
   test:
     name: Test (Python ${{ matrix.python-version }})
     runs-on: ubuntu-latest
-    if: github.event_name != 'release'
     strategy:
       fail-fast: false
       matrix:
@@ -89,7 +87,6 @@ jobs:
   sbom:
     name: SBOM
     runs-on: ubuntu-latest
-    if: github.event_name != 'release'
     steps:
       - name: Checkout code
         uses: actions/checkout@v6
@@ -128,33 +125,21 @@ jobs:
     name: All Checks Passed
     if: always()
     needs: [lint, test, sbom]
-    runs-on: ubuntu-latest
     outputs:
       success: ${{ steps.check.outputs.success }}
+    runs-on: ubuntu-latest
     steps:
       - name: Check all jobs
         id: check
         run: |
-          # Fail if any job failed or was cancelled
-          if [[ "${{ needs.lint.result }}" == "failure" || "${{ needs.lint.result }}" == "cancelled" ]] || \
-             [[ "${{ needs.test.result }}" == "failure" || "${{ needs.test.result }}" == "cancelled" ]] || \
-             [[ "${{ needs.sbom.result }}" == "failure" || "${{ needs.sbom.result }}" == "cancelled" ]]; then
+          if [[ "${{ needs.lint.result }}" == "success" ]] && [[ "${{ needs.test.result }}" == "success" ]] && [[ "${{ needs.sbom.result }}" == "success" ]]; then
+            echo "success=true" >> $GITHUB_OUTPUT
+            echo "All checks passed!"
+          else
             echo "success=false" >> $GITHUB_OUTPUT
-            echo "One or more checks failed or were cancelled"
+            echo "One or more checks failed"
             exit 1
           fi
-
-          # If it's a push to main, we additionally require success (not skip)
-          if [[ "${{ github.event_name }}" == "push" && "${{ github.ref }}" == "refs/heads/main" ]]; then
-            if [[ "${{ needs.lint.result }}" != "success" || "${{ needs.test.result }}" != "success" || "${{ needs.sbom.result }}" != "success" ]]; then
-              echo "success=false" >> $GITHUB_OUTPUT
-              echo "Checks were unexpectedly skipped on main branch"
-              exit 1
-            fi
-          fi
-
-          echo "success=true" >> $GITHUB_OUTPUT
-          echo "All checks passed (or were intentionally skipped during release)"
 
   draft-release:
     name: Draft Release
@@ -213,10 +198,11 @@ jobs:
   publish:
     name: Build and Publish
     runs-on: ubuntu-latest
+    needs: [all-checks]
     environment:
       name: pypi
       url: https://pypi.org/p/cloudflare-request-cert
-    if: github.event_name == 'release' && github.event.action == 'published'
+    if: github.event_name == 'release' && github.event.action == 'published' && needs.all-checks.outputs.success == 'true'
     steps:
       - name: Checkout code
         uses: actions/checkout@v6
