--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,6 @@ jobs:
   lint:
     name: Lint
     runs-on: ubuntu-latest
-    if: github.event_name != 'release'
     steps:
       - name: Checkout code
         uses: actions/checkout@v6
@@ -44,7 +43,6 @@ jobs:
   test:
     name: Test (Python ${{ matrix.python-version }})
     runs-on: ubuntu-latest
-    if: github.event_name != 'release'
     strategy:
       fail-fast: false
       matrix:
@@ -89,7 +87,6 @@ jobs:
   sbom:
     name: SBOM
     runs-on: ubuntu-latest
-    if: github.event_name != 'release'
     steps:
       - name: Checkout code
         uses: actions/checkout@v6
@@ -128,9 +125,9 @@ jobs:
     name: All Checks Passed
     if: always()
     needs: [lint, test, sbom]
-    runs-on: ubuntu-latest
     outputs:
       success: ${{ steps.check.outputs.success }}
+    runs-on: ubuntu-latest
     steps:
       - name: Check all jobs
         id: check
@@ -201,10 +198,11 @@ jobs:
   publish:
     name: Build and Publish
     runs-on: ubuntu-latest
+    needs: [all-checks]
     environment:
       name: pypi
       url: https://pypi.org/p/cloudflare-request-cert
-    if: github.event_name == 'release' && github.event.action == 'published'
+    if: github.event_name == 'release' && github.event.action == 'published' && needs.all-checks.outputs.success == 'true'
     steps:
       - name: Checkout code
         uses: actions/checkout@v6
