--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,12 @@
 [project]
 name = "cloudflare-request-cert"
-version = "0.1.4"
+version = "0.1.5"
 description = "SSL/TLS certificate automation using Cloudflare DNS"
 authors = [{ name = "Olof Hellqvist", email = "olof.hellqvist@gmail.com" }]
 license = { text = "MIT" }
 readme = "README.md"
 requires-python = ">=3.10"
-keywords = ["cloudflare", "certbot", "ssl", "tls", "dns-01"]
+keywords = ["cloudflare", "certbot", "ssl", "tls"]
 classifiers = [
     "Development Status :: 4 - Beta",
     "Intended Audience :: System Administrators",
